<resources>
    <string name="app_name">Accelerometer</string>
    <string name="action_settings">Settings</string>
    <string name="y">Yの値</string>
    <string name="z">Zの値</string>
    <string name="x">Xの値</string>
    <string name="x_string_x">X軸の傾き：@string/x</string>
    <string name="y_string_y">Y軸の傾き：@string/y</string>
    <string name="z_string_z">Z軸の傾き：@string/z</string>
    <string name="X">X軸の値：</string>
    <string name="Y">Y軸の値：</string>
    <string name="Z">Z軸の値：</string>
    <string name="kasokudo">加速度センサーのデータ</string>
    <string name="start">START</string>
    <string name="change">CHANGE</string>
    <string name="stop">STOP</string>
    <string name="timeview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="subactivity">Button</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapsactivity">Button</string>
    <string name="back">back</string>
    <string name="maps">maps</string>
    <string name="db">db</string>
    <string name="view01">TextView</string>
</resources>
